--- a/styles/global.css
+++ b/styles/global.css
@@ -9,29 +9,38 @@ a {
 a:hover {
   color: var(--main-blue);
 }
-.page-content{
-  max-width:923px;
-  width:100%;
-  margin-left:auto;
+.page-content {
+  max-width: 923px;
+  width: 100%;
+  margin-left: auto;
   margin-right: auto;
-  padding-top:20px;
-  padding-left:10px;
-  padding-right: 10px;
+  min-height: 100%;
 }
-.flex-content{
-  display:flex;
-  flex-direction: row;
+.flex-content {
+  display: flex;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
 }
-.icon-btn{
-  border:none;
-  outline:none;
+.icon-btn {
+  border: none;
+  outline: none;
   background: inherit;
   cursor: pointer;
-  height:var(--finger-size);
-  width:var(--finger-size);
+  height: var(--finger-size);
+  width: var(--finger-size);
 }
-.icon-btn:hover{
-  color:var(--main-blue);
+.icon-btn:hover {
+  color: var(--main-blue);
+}
+
+@media screen and (min-width: 768px) {
+  .page-content {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 20px;
+  }
+  .flex-content{
+    flex-direction: row;
+  }
 }
