--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,7 @@ body {
   color: var(--font-color);
   background-color: var(--bg-color);
   width:100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 a {
   color: var(--font-color);
