--- a/styles/global.css
+++ b/styles/global.css
@@ -2,8 +2,9 @@ body {
   font-size: var(--font-size);
   color: var(--font-color);
   background-color: var(--bg-color);
-  width:100%;
+  width: 100%;
   overflow-x: hidden;
+  font-family: "Open Sans";
 }
 a {
   color: var(--font-color);
@@ -24,6 +25,7 @@ a:hover {
   align-items: flex-start;
   justify-content: space-between;
 }
+
 .icon-btn {
   border: none;
   outline: none;
